# openai-component

./: Cargo.toml  README.md  wasmcloud.toml
src/: lib.rs
wit/: world.wit
