[package]
name = "openai-standalone"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.39"
wasmcloud-component = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasi = "*"
futures = "0.3"
url = "*"

# (Optional but recommended)
anyhow = "1"   
